tests/ui-tests/tests/cases/inline-fragment-exhaustiveness.stderr
error: Could not find a match for Nestde in MyUnionType. Did you mean Nested?
  --> $DIR/inline-fragment-exhaustiveness.rs:17:5
   |
17 |     Nestde(Nested),
   |     ^^^^^^

error: This InlineFragment is missing a variant for Nested.  Either provide a variant for this type or add a fallback variant.
 --> $DIR/inline-fragment-exhaustiveness.rs:9:10
  |
9 | #[derive(cynic::InlineFragments)]
  |          ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
